Fix styling for benefits on mobile

--- a/styles.css
+++ b/styles.css
@@ -295,13 +295,12 @@ li img {
 
 .middle-benefit h4 {
   font-family: "Salsa", system-ui;
-  margin-top: 5rem;
+  padding-top: 5rem 0 1.1rem 0;
   font-size: 1.26rem;
-  padding-bottom: 1.1rem;
 }
 
 .middle-benefit p {
-  margin: 0 12rem;
+  padding: 0 12rem;
   font-size: 1.25rem;
   letter-spacing: .07rem;
 }
@@ -705,17 +704,20 @@ footer {
     width: 100%;
   }
 
+  .provide-list .end-benefits h4,
   .provide-list .end-benefits h4 { 
     text-align: center;
     width: 100%;
     padding: 1rem 0rem 0rem 2.5rem;
   }
 
-  .provide-list .end-benefits p {
+  .provide-list .end-benefits p,
+  .provide-list .middle-benefit p {
     padding: 1rem 0rem 0rem 2.5rem;
   }
 
-  .provide-list .end-benefits img {
+  .provide-list .end-benefits img,
+  .provide-list .middle-benefit img {
     width: 100vw;
   }
 
